--- a/DPR/conf/datasets/encoder_train_default.yaml
+++ b/DPR/conf/datasets/encoder_train_default.yaml
@@ -112,3 +112,94 @@ ott_linker_train:
 ott_linker_dev:
   _target_: dpr.data.biencoder_data.JsonQADataset
   file: /home/kaixinm/kaixinm/UDT-QA/DPR/data/CORE/ott_table_linker_dev_with_bm25neg.json
+
+##### COS DATA ##### 
+
+hotpot_train_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/HotpotQA/hotpot_retriever_linker_full_4experts/hotpot_train_iter2.json
+
+hotpot_dev_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/HotpotQA/hotpot_retriever_linker_full_4experts/hotpot_dev_iter2.json
+
+hotpot_train_hop2_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/HotpotQA/hotpot_retriever_linker_full_4experts/hotpot_train_hop2_iter2.json
+
+hotpot_dev_hop2_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/HotpotQA/hotpot_retriever_linker_full_4experts/hotpot_dev_hop2_iter2.json
+
+hotpot_train_rerank_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/HotpotQA/hotpot_retriever_linker_full_4experts/hotpot_train_expert_reranker.json
+
+hotpot_dev_rerank_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/HotpotQA/hotpot_retriever_linker_full_4experts/hotpot_dev_expert_reranker.json
+
+hotpot_link_train_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/HotpotQA/hotpot_retriever_linker_full_4experts/hotpot_train_paras_link_iter2_reduced.json
+
+hotpot_link_dev_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/HotpotQA/hotpot_retriever_linker_full_4experts/hotpot_dev_paras_link_iter2_reduced.json
+
+hotpot_question_link_train_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/HotpotQA/hotpot_retriever_linker_full_4experts/hotpot_train_question_link_iter2_reduced.json
+
+hotpot_question_link_dev_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/HotpotQA/hotpot_retriever_linker_full_4experts/hotpot_dev_question_link_iter2_reduced.json
+
+
+ott_hop1_train:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/blobdata/OTT-QA/retriever_data/train_q_to_tables_with_bm25neg.json
+
+ott_hop1_dev:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/blobdata/OTT-QA/retriever_data/dev_q_to_tables_with_bm25neg.json
+
+ott_hop2_train_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/OTT-QA/biencoder_moe_encoder_n4_retriever_linker_rbhop2_80eps/train_q_tables_to_pasgs_row_based_iter2.json
+
+ott_hop2_dev_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/OTT-QA/biencoder_moe_encoder_n4_retriever_linker_rbhop2_80eps/dev_q_tables_to_pasgs_row_based_iter2.json
+
+ott_link_train_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/OTT-QA/biencoder_moe_encoder_n4_retriever_linker_rbhop2_80eps/train_linking_iter2_reduced.json
+
+ott_link_dev_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/OTT-QA/biencoder_moe_encoder_n4_retriever_linker_rbhop2_80eps/dev_linking_iter2_reduced.json
+
+ott_rerank_train_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/OTT-QA/biencoder_moe_encoder_n4_retriever_linker_rbhop2_80eps/train_rerank.json
+
+ott_rerank_dev_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/laketahoe_checkpoint/OTT-QA/biencoder_moe_encoder_n4_retriever_linker_rbhop2_80eps/dev_rerank.json
+
+NQ_train_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/blobdata/NQ/taser_data/nq-train_text_pos_dpr_neg_raw_index_with_passage_id.json
+
+NQ_train_table_iter2:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/blobdata/NQ/taser_data/nq-train_raw_table_pos_dpr_neg_with_passage_id.json
+
+NQ_train_rerank_iter2_title:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/blobdata/NQ/taser_data/nq-train_text_pos_rerank_with_title.json
+
+NQ_train_table_rerank_iter2_title:
+  _target_: dpr.data.biencoder_data.JsonQADataset
+  file: /home/v-kaixinma/blobdata/NQ/taser_data/nq-train_raw_table_pos_rerank_with_title.json
