--- a/DPR/conf/train/biencoder_nq.yaml
+++ b/DPR/conf/train/biencoder_nq.yaml
@@ -10,6 +10,9 @@ train_rolling_loss_step: 100
 weight_decay: 0.0
 learning_rate: 2e-5
 
+use_layer_lr: False
+layer_decay: 0.8
+
 # Linear warmup over warmup_steps.
 warmup_steps: 1237
 
