--- a/cos.yml
+++ b/cos.yml
@@ -34,7 +34,6 @@ dependencies:
       - adal==1.2.7
       - aiohttp==3.8.1
       - aiosignal==1.2.0
-      - amlt==9.15.3.post1
       - antlr4-python3-runtime==4.8
       - applicationinsights==0.11.10
       - argcomplete==2.1.2
@@ -58,17 +57,6 @@ dependencies:
       - azure-mgmt-resource==21.1.0
       - azure-mgmt-storage==20.0.0
       - azure-storage-blob==12.12.0
-      - azureml-contrib-aisc==1.50.0
-      - azureml-contrib-k8s==0.1.18
-      - azureml-core==1.50.0
-      - azureml-dataprep==4.10.7
-      - azureml-dataprep-native==38.0.0
-      - azureml-dataprep-rslex==2.17.7
-      - azureml-dataset-runtime==1.50.0
-      - azureml-k8s-mt==1.0.6b1
-      - azureml-telemetry==1.50.0
-      - azureml-train-core==1.50.0
-      - azureml-train-restclients-hyperdrive==1.50.0
       - backports-tempfile==1.0
       - backports-weakref==1.0.post1
       - bcrypt==4.0.1
@@ -95,7 +83,6 @@ dependencies:
       - docker==6.0.1
       - dotnetcore2==3.1.23
       - ecdsa==0.18.0
-      - en-core-web-sm==3.5.0
       - fairscale==0.4.6
       - faiss-cpu==1.6.3
       - faiss-gpu==1.7.2
@@ -184,7 +171,6 @@ dependencies:
       - passpy==1.0.2
       - pathspec==0.11.1
       - pathy==0.10.1
-      - petname==2.7.post1
       - pillow==9.5.0
       - pkginfo==1.9.6
       - pkgutil-resolve-name==1.3.10
@@ -192,7 +178,7 @@ dependencies:
       - portalocker==2.7.0
       - preshed==3.0.6
       - prompt-toolkit==3.0.38
-      - protobuf==4.22.3
+      - protobuf
       - psutil==5.9.5
       - pyarrow==9.0.0
       - pyasn1==0.4.8
